add div in the index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+<div class="div">
+    <h3>Test2</h3>
+</div>
 <p>my test</p>
 <ul>
     <li>item</li>
